# nicegui-blackjack

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
blackjack/: index.html
docs/: blackjack.md  index.md
search/: search_index.json
src/nicegui_blackjack/: __init__.py  __main__.py  blackjack.py
src/tests/: test_game.py
