[project]
authors = [
  {name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"},
]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "fire>=0.7.0",
  "nicegui>=2.11.1",
]
description = "Blackjack game on NiceGUI"
name = "nicegui-blackjack"
readme = "README.md"
requires-python = ">=3.12"
version = "0.2.7"

[project.urls]
docs = "https://saitotsutomu.github.io/nicegui-blackjack/"
homepage = "https://github.com/SaitoTsutomu/nicegui-blackjack"

[project.scripts]
blackjack = "nicegui_blackjack:main"

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.4",
]

[tool.mypy]
files = "src"
ignore_missing_imports = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = ["ANN", "CPY", "D203", "D213", "D400", "D415", "DOC", "E501"]
preview = true
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
